--- a/soc-firewall-sentinel.conf
+++ b/soc-firewall-sentinel.conf
@@ -83,18 +83,15 @@ filter {
 }
 
 output {
-   #if "metric" in [tags] {
-   #   file {
-   #     path => "/tmp/cmetrics.log"
-   #     codec => line {
-   #        format => "rate: %{[events][rate_1m]}"
-   #     }
-   #  }
-   #}
-   syslog {
-              host => "127.0.0.1"
-              port => 25226
-              protocol => "tcp"
+   #if "metric" in [ta
+
+
+
+logstash-output-azure-loganalytics {
+              destination_ip => "127.0.0.1"
+              destination_port => 25226
+              plugin_flush_interval => 1
+              max_items => 8000
 	      #path => "/tmp/cefevents.log"
               codec => cef {
                              reverse_mapping => true
