--- a/soc-firewall-sentinel.conf
+++ b/soc-firewall-sentinel.conf
@@ -87,7 +87,7 @@ output {
 
 
 
-logstash-output-azure-loganalytics {
+foo {
               destination_ip => "127.0.0.1"
               destination_port => 25226
               plugin_flush_interval => 1
