--- a/examples/logstash-syslog-loganalytics.conf
+++ b/examples/logstash-syslog-loganalytics.conf
@@ -12,7 +12,7 @@ filter {
 }
 
 output {
-        logstash-output-azure-loganalytics {
+        foo {
                 workspace_id => "<WS_ID>"
                 workspace_key => "${WS_KEY}"
                 custom_log_table_name => "logstashCustomTable"
