--- a/examples/logstash-syslog-loganalytics.conf
+++ b/examples/logstash-syslog-loganalytics.conf
@@ -12,11 +12,7 @@ filter {
 }
 
 output {
-        foo {
-                workspace_id => "<WS_ID>"
-                workspace_key => "${WS_KEY}"
-                custom_log_table_name => "logstashCustomTable"
-                key_names => ['PRI','TIME_TAG','HOSTNAME','MSG']
+        syslog-sentinel {
                 plugin_flush_interval => 5
         }
 }
