--- a/soc-firewall-sentinel.conf
+++ b/soc-firewall-sentinel.conf
@@ -83,146 +83,139 @@ filter {
 }
 
 output {
-   #if "metric" in [ta
-
-
-
-foo {
-              destination_ip => "127.0.0.1"
-              destination_port => 25226
-              plugin_flush_interval => 1
-              max_items => 8000
-	      #path => "/tmp/cefevents.log"
-              codec => cef {
-                             reverse_mapping => true
-                             delimiter => "\r\n"
-                             vendor      => "%{deviceVendor}"
-                             product     => "%{deviceProduct}"
-                             version     => "%{deviceVersion}"
-                             signature   => "%{deviceEventClassId}"
-                             name        => "%{name}"
-                             severity    => "%{severity}"
-                             fields => [
-"ad.cs10",
-"ad.cs13",
-"ad.cs14",
-"ad.cs19",
-"ad.cs7",
-"ad.cs8",
-"agentAddress",
-"agentHost",
-"agentHostName",
-"agentId",
-"agentMacAddress",
-"agentReceiptTime",
-"agentTimeZone",
-"agentType",
-"agentVersion",
-"agentZoneURI",
-"applicationProtocol",
-"baseEventCount",
-"bytesIn",
-"bytesOut",
-"categoryDeviceType",
-"ccSearchTime",
-"cefVersion",
-"city_name",
-"continent_code",
-"country_code2",
-"country_code3",
-"country_name",
-"destinationAddress",
-"destinationHostName",
-"destinationLatitude",
-"destinationLongitude",
-"destinationMacAddress",
-"destinationNtDomain",
-"destinationPort",
-"destinationProcessId",
-"destinationProcessName",
-"destinationTimeZone",
-"destinationUserId",
-"destinationUserName",
-"destinationUserPrivileges",
-"deviceAction",
-"deviceAddress",
-"deviceCustomFloatingPoint1",
-"deviceCustomFloatingPoint1Label",
-"deviceCustomFloatingPoint2",
-"deviceCustomFloatingPoint2Label",
-"deviceCustomFloatingPoint3",
-"deviceCustomFloatingPoint3Label",
-"deviceCustomFloatingPoint4",
-"deviceCustomFloatingPoint4Label",
-"deviceCustomIPv6Address1",
-"deviceCustomIPv6Address1Label",
-"deviceCustomIPv6Address2",
-"deviceCustomIPv6Address2Label",
-"deviceCustomIPv6Address3",
-"deviceCustomIPv6Address3Label",
-"deviceCustomIPv6Address4",
-"deviceCustomIPv6Address4Label",
-"deviceCustomNumber1",
-"deviceCustomNumber1Label",
-"deviceCustomNumber2",
-"deviceCustomNumber2Label",
-"deviceCustomNumber3",
-"deviceCustomNumber3Label",
-"deviceCustomString1",
-"deviceCustomString1Label",
-"deviceCustomString2",
-"deviceCustomString2Label",
-"deviceCustomString3",
-"deviceCustomString3Label",
-"deviceCustomString4",
-"deviceCustomString4Label",
-"deviceCustomString5",
-"deviceCustomString5Label",
-"deviceCustomString6",
-"deviceCustomString6Label",
-"deviceEventCategory",
-"deviceHostName",
-"deviceProcessId",
-"deviceReceiptTime",
-"dma_code",
-"endTime",
-"eventOutcome",
-"fileName",
-"fileSize",
-"ip",
-"lat",
-"latitude",
-"location",
-"lon",
-"longitude",
-"managerReceiptTime",
-"message",
-"postal_code",
-"region_code",
-"region_name",
-"requestClientApplication",
-"requestUrlQuery",
-"source",
-"requestUrl",
-"sourceAddress",
-"sourceHostName",
-"sourceLatitude",
-"sourceLongitude",
-"sourceMacAddress",
-"sourceNtDomain",
-"sourcePort",
-"sourceProcessId",
-"sourceProcessName",
-"sourceUserId",
-"sourceUserName",
-"sourceUserPrivileges",
-"startTime",
-"transportProtocol",
-"timezone",
-"ccSearchTime"
-                             ]
-              }
-  }
-
-
+   syslog-sentinel {
+      destination_ip => "127.0.0.1"
+      destination_port => 25226
+      plugin_flush_interval => 1
+      max_items => 8000
+      codec => cef {
+         reverse_mapping => true
+         delimiter => "\r\n"
+         vendor      => "%{deviceVendor}"
+         product     => "%{deviceProduct}"
+         version     => "%{deviceVersion}"
+         signature   => "%{deviceEventClassId}"
+         name        => "%{name}"
+         severity    => "%{severity}"
+         fields => [
+            "ad.cs10",
+            "ad.cs13",
+            "ad.cs14",
+            "ad.cs19",
+            "ad.cs7",
+            "ad.cs8",
+            "agentAddress",
+            "agentHost",
+            "agentHostName",
+            "agentId",
+            "agentMacAddress",
+            "agentReceiptTime",
+            "agentTimeZone",
+            "agentType",
+            "agentVersion",
+            "agentZoneURI",
+            "applicationProtocol",
+            "baseEventCount",
+            "bytesIn",
+            "bytesOut",
+            "categoryDeviceType",
+            "ccSearchTime",
+            "cefVersion",
+            "city_name",
+            "continent_code",
+            "country_code2",
+            "country_code3",
+            "country_name",
+            "destinationAddress",
+            "destinationHostName",
+            "destinationLatitude",
+            "destinationLongitude",
+            "destinationMacAddress",
+            "destinationNtDomain",
+            "destinationPort",
+            "destinationProcessId",
+            "destinationProcessName",
+            "destinationTimeZone",
+            "destinationUserId",
+            "destinationUserName",
+            "destinationUserPrivileges",
+            "deviceAction",
+            "deviceAddress",
+            "deviceCustomFloatingPoint1",
+            "deviceCustomFloatingPoint1Label",
+            "deviceCustomFloatingPoint2",
+            "deviceCustomFloatingPoint2Label",
+            "deviceCustomFloatingPoint3",
+            "deviceCustomFloatingPoint3Label",
+            "deviceCustomFloatingPoint4",
+            "deviceCustomFloatingPoint4Label",
+            "deviceCustomIPv6Address1",
+            "deviceCustomIPv6Address1Label",
+            "deviceCustomIPv6Address2",
+            "deviceCustomIPv6Address2Label",
+            "deviceCustomIPv6Address3",
+            "deviceCustomIPv6Address3Label",
+            "deviceCustomIPv6Address4",
+            "deviceCustomIPv6Address4Label",
+            "deviceCustomNumber1",
+            "deviceCustomNumber1Label",
+            "deviceCustomNumber2",
+            "deviceCustomNumber2Label",
+            "deviceCustomNumber3",
+            "deviceCustomNumber3Label",
+            "deviceCustomString1",
+            "deviceCustomString1Label",
+            "deviceCustomString2",
+            "deviceCustomString2Label",
+            "deviceCustomString3",
+            "deviceCustomString3Label",
+            "deviceCustomString4",
+            "deviceCustomString4Label",
+            "deviceCustomString5",
+            "deviceCustomString5Label",
+            "deviceCustomString6",
+            "deviceCustomString6Label",
+            "deviceEventCategory",
+            "deviceHostName",
+            "deviceProcessId",
+            "deviceReceiptTime",
+            "dma_code",
+            "endTime",
+            "eventOutcome",
+            "fileName",
+            "fileSize",
+            "ip",
+            "lat",
+            "latitude",
+            "location",
+            "lon",
+            "longitude",
+            "managerReceiptTime",
+            "message",
+            "postal_code",
+            "region_code",
+            "region_name",
+            "requestClientApplication",
+            "requestUrlQuery",
+            "source",
+            "requestUrl",
+            "sourceAddress",
+            "sourceHostName",
+            "sourceLatitude",
+            "sourceLongitude",
+            "sourceMacAddress",
+            "sourceNtDomain",
+            "sourcePort",
+            "sourceProcessId",
+            "sourceProcessName",
+            "sourceUserId",
+            "sourceUserName",
+            "sourceUserPrivileges",
+            "startTime",
+            "transportProtocol",
+            "timezone",
+            "ccSearchTime"
+            ]
+         }
+   }
 }
